--- a/RSA.vcxproj.filters
+++ b/RSA.vcxproj.filters
@@ -20,9 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Text.txt">
-      <Filter>Source Files</Filter>
-    </Text>
     <Text Include="Encryption.txt">
       <Filter>Source Files</Filter>
     </Text>
@@ -31,5 +28,6 @@
     </Text>
     <Text Include="ASCII.txt" />
     <Text Include="ASCII2.txt" />
+    <Text Include="message.txt" />
   </ItemGroup>
 </Project>
